added middle ware and login page
